<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView

            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:padding="2dp"
            android:text="@string/welcome_to_the_wild_code_school"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBox_wilder"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/yes_i_want_to_be_a_wilder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="38dp" />


        <EditText
            android:id="@+id/edit_lastname"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="138dp" />

        <EditText
            android:id="@+id/edit_firstname"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="81dp" />

        <Button
            android:id="@+id/button_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/accept"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="200dp" />

        <TextView
            android:id="@+id/text_congratulation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingTop="32dp"
            android:text="TextView"
            android:visibility="invisible" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>